# unclaimed-orders-service

./: .dockerignore  .env.example  .env.sops  .gitignore  .sops.yaml  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
tests/: test_app_cron.py  test_domain.py  test_erp.py  test_list_due_emails.py  test_list_orders.py  test_rotate_yandex_session.py
unclaimed_orders_service/: __init__.py  adapters.py  app.py  domain.py  erp.py  find_erp_order.py  list_due_emails.py  list_orders.py  rotate_yandex_session.py  widgets.py
