[project]
name = "unclaimed-orders-service"
version = "0.1.0"
description = "Standalone service for unclaimed pickup orders."
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.115",
  "httpx>=0.27",
  "psycopg[binary]>=3.2,<4",
  "pypdf>=5,<7",
  "requests>=2.32,<3",
  "uvicorn>=0.32",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unclaimed_orders_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
